# alexandrie-backend

./: .env  .gitignore  Cargo.toml  README.md  appconfig.yml
dev/: docker-compose.yml
dev/postgres/: Dockerfile
migrations/: 20210109164006_users.sql
src/: configuration.rs  main.rs
src/cfg/: mod.rs  models.rs  resolver.rs
src/db/: mod.rs  users.rs
src/error/: database.rs  db.rs  mod.rs
src/routes/: health.rs  mod.rs  users.rs
src/tests/: health.rs  mod.rs  users.rs
src/utils/: crypto.rs
