[package]
name = "alexandrie-backend"
version = "0.1.0"
authors = ["Laurent Fourrier <ltfourrier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0"
sqlx = { version = "0.4", features = [ "postgres", "runtime-actix-native-tls" ] }
anyhow = "1.0"
log = "0.4"
simple_logger = "1.11"