[package]
name = "alexandrie-backend"
version = "0.1.0"
authors = ["Laurent Fourrier <ltfourrier@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
serde = "1.0"
sqlx = { version = "0.4", features = ["postgres", "runtime-actix-native-tls"] }
anyhow = "1.0"
log = "0.4"
simple_logger = "1.11"
config = "0.10"
derive_more = "0.99"